--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mimaraslan</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>spring-cloud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>spring-cloud</name>
+	<description>spring-cloud project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
