--- a/netflix-eureka-server-client-hystrix/employee-service/src/main/resources/application.yml
+++ b/netflix-eureka-server-client-hystrix/employee-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:    
   application:
-    name: employee-service  
+    name: _02_employee-service  
  
 eureka:         
   instance:
