--- a/netflix-eureka-server-client-hystrix/school-service/src/main/resources/application.yml
+++ b/netflix-eureka-server-client-hystrix/school-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   
 spring:    
   application:
-    name: school-service      
+    name: _05_school-service      
  
 eureka:         
   instance:
