--- a/netflix-eureka-server-client-hystrix/_01_eureka-server/pom.xml
+++ b/netflix-eureka-server-client-hystrix/_01_eureka-server/pom.xml
@@ -17,6 +17,8 @@
 	<description>Eureka Server project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.1.3</spring-boot-admin.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
