--- a/netflix-eureka-server-client-hystrix/_05_school-service/pom.xml
+++ b/netflix-eureka-server-client-hystrix/_05_school-service/pom.xml
@@ -17,6 +17,8 @@
 	<description>Eureka Client project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 	</properties>
