--- a/_003_netflix-eureka-server-admin-client-ribbon/_03_ribbon-client/src/main/resources/application.properties
+++ b/_003_netflix-eureka-server-admin-client-ribbon/_03_ribbon-client/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name= ribbon-client
-server.port= 9092
+spring.application.name= _03_ribbon-client
+server.port= 9093
 
 eureka.client.serviceUrl.defaultZone= http://${registry.host:localhost}:${registry.port:8761}/eureka/
 eureka.client.healthcheck.enabled= true
