--- a/_003_netflix-eureka-server-admin-client-ribbon/_02_ribbon-server/src/main/resources/application.properties
+++ b/_003_netflix-eureka-server-admin-client-ribbon/_02_ribbon-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name= _02_robbin-server
+spring.application.name= robbinserver
 server.port = 9092
 
 eureka.client.serviceUrl.defaultZone= http://${registry.host:localhost}:${registry.port:8761}/eureka/
