--- a/_003_netflix-eureka-server-admin-client-ribbon/_03_ribbon-client/src/main/resources/application.properties
+++ b/_003_netflix-eureka-server-admin-client-ribbon/_03_ribbon-client/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name= ribbonclient
+spring.application.name= client
 server.port= 9093
 
 eureka.client.serviceUrl.defaultZone= http://${registry.host:localhost}:${registry.port:8761}/eureka/
