--- a/netflix-eureka-server-client-hystrix/_04_student-service/pom.xml
+++ b/netflix-eureka-server-client-hystrix/_04_student-service/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.3.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mimaraslan</groupId>
-	<artifactId>_05_school-service</artifactId>
+	<artifactId>_04_student-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>school-service</name>
-	<description>Eureka Client project for Spring Boot</description>
+	<name>_04_student-service</name>
+	<description>Hystrix project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -77,7 +78,7 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-		<!-- for Java 11 -->  		
+		<!-- for Java 11 -->
 	</dependencies>
 
 	<dependencyManagement>
