--- a/_004_netflix-eureka-server-admin-client-hystrix-resttemplate/_01_eureka-server/src/main/resources/application.yml
+++ b/_004_netflix-eureka-server-admin-client-hystrix-resttemplate/_01_eureka-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: _01_eureka-server       
   boot:
     admin:
-      context-path: /admin  #A different context path for admin server has been provided not conflicting with eureka
+      context-path: /admin 
        
 eureka:
   client:
@@ -17,7 +17,3 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     leaseRenewalIntervalInSeconds: 10
- 
-#management:
-#  security:
-#    enabled: false
