--- a/spring-boot-netflix-ribbon/_01_eureka-server/pom.xml
+++ b/spring-boot-netflix-ribbon/_01_eureka-server/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>eureka-server</name>
+	<name>_01_eureka-server</name>
 	<description>Eureka Server</description>
 
 	<parent>
