--- a/_005_netflix-eureka-server-admin-client-hystrix-resttemplate/_01_eureka-server/src/main/resources/application.properties
+++ b/_005_netflix-eureka-server-admin-client-hystrix-resttemplate/_01_eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#management.security.enabled=false
+server.port = 8761
+spring.application.name=myserver
 management.endpoints.web.exposure.include=*
-
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
