--- a/_005_netflix-eureka-server-admin-client-hystrix-resttemplate/_02_email-service/src/main/resources/application.properties
+++ b/_005_netflix-eureka-server-admin-client-hystrix-resttemplate/_02_email-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8082
 management.endpoints.web.exposure.include=*
+spring.application.name=myservice
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
