--- a/_005_netflix-eureka-server-admin-client-hystrix-resttemplate/_04_book-service/src/main/resources/application.properties
+++ b/_005_netflix-eureka-server-admin-client-hystrix-resttemplate/_04_book-service/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8084
 management.endpoints.web.exposure.include=*
+spring.application.name=myclient
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=false
