--- a/netflix-eureka-server-client-hystrix/_01_eureka-server/src/main/resources/application.properties
+++ b/netflix-eureka-server-client-hystrix/_01_eureka-server/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #management.security.enabled=false
 management.endpoints.web.exposure.include=*
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
