--- a/netflix-eureka-server-client-hystrix/pom.xml
+++ b/netflix-eureka-server-client-hystrix/pom.xml
@@ -11,6 +11,8 @@
 	<description>Netflix eureka server client hystrix project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
 
