--- a/_008_spring-cloud-streaming/pom.xml
+++ b/_008_spring-cloud-streaming/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mimaraslan</groupId>
-	<artifactId>spring-cloud-streaming</artifactId>
+	<artifactId>_008_spring-cloud-streaming</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-cloud-streaming</name>
 	<description>Demo project for Spring Cloud Streaming</description>
