Spring Cloud Stream
Spring Cloud Stream

--- a/_008_spring-cloud-streaming/spring-cloud-stream-consumer/pom.xml
+++ b/_008_spring-cloud-streaming/spring-cloud-stream-consumer/pom.xml
@@ -6,12 +6,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> 
     </parent>
     <groupId>com.mimaraslan</groupId>
     <artifactId>spring-cloud-stream-consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-cloud-stream-consumer</name>
+    <name>_02_spring-cloud-stream-consumer</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
