--- a/_009_netflix-microservices/pom.xml
+++ b/_009_netflix-microservices/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.mimaraslan</groupId>
     <artifactId>_009_netflix-microservices</artifactId>
