--- a/_009_netflix-microservices/main-service-spring-cloud-eureka-server/pom.xml
+++ b/_009_netflix-microservices/main-service-spring-cloud-eureka-server/pom.xml
@@ -14,6 +14,8 @@
     <name>main-service-spring-cloud-eureka-server</name>
     <description>main-service-spring-cloud-eureka-server</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.1</spring-cloud.version>
         <spring-boot-admin.version>2.6.5</spring-boot-admin.version>
