--- a/_009_netflix-microservices/pom.xml
+++ b/_009_netflix-microservices/pom.xml
@@ -14,6 +14,8 @@
     <name>_009_netflix-microservices</name>
     <description>_009_netflix-microservices</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
     </properties>
     <dependencies>
