--- a/_009_netflix-microservices/service-limits/pom.xml
+++ b/_009_netflix-microservices/service-limits/pom.xml
@@ -15,6 +15,8 @@
     <description>limits-service</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.1</spring-cloud.version>
         <hystrix.version>2.2.10.RELEASE</hystrix.version>
